<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:inputType="textEmailAddress" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/mobileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_label" />

            <EditText
                android:id="@+id/mobileInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:inputType="phone" >
            </EditText>
        </LinearLayout>

        <TextView
            android:id="@+id/fuelsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuels_label" />

        <TextView
            android:id="@+id/fuelsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuels_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/gasCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gas" />

            <Spinner
                android:id="@+id/gasUnits"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/gasSupplier"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/electricCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/electric" />

            <Spinner
                android:id="@+id/electricSupplier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/oilCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oil" />

            <Spinner
                android:id="@+id/oilUnits"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/coalCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coal" />

        </LinearLayout>

        <TextView
            android:id="@+id/car_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/fuelTypeLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type" />

            <Spinner
                android:id="@+id/fuelTypeInput1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/carSizeLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size" />

            <Spinner
                android:id="@+id/carSizeInput1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/car_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_2"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/car_fuel_container2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/fuelTypeLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type" />

            <Spinner
                android:id="@+id/fuelTypeInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/car_size_container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/carSizeLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size" />

            <Spinner
                android:id="@+id/carSizeInput2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/car_label3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_3"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/car_fuel_container3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/fuelTypeLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type" />

            <Spinner
                android:id="@+id/fuelTypeInput3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/car_size_container3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/carSizeLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size" />

            <Spinner
                android:id="@+id/carSizeInput3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/car_label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_4"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/car_fuel_container4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/fuelTypeLabel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type" />

            <Spinner
                android:id="@+id/fuelTypeInput4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/car_size_container4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/carSizeLabel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size" />

            <Spinner
                android:id="@+id/carSizeInput4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/car_label5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_5"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/car_fuel_container5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/fuelTypeLabel5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type" />

            <Spinner
                android:id="@+id/fuelTypeInput5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/car_size_container5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/carSizeLabel5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size" />

            <Spinner
                android:id="@+id/carSizeInput5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/addCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/add_car" />

        <CheckBox
            android:id="@+id/tandcsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tandcs" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/policyLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_description" />

    </LinearLayout>

</ScrollView>